// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletConnectSessions does not render when not ready 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`WalletConnectSessions renders empty component with no active sessions 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={2}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 16,
                            "height": 56,
                            "paddingLeft": 8,
                            "paddingRight": 8,
                          },
                          {
                            "marginTop": 0,
                          },
                          undefined,
                        ]
                      }
                      testID="header"
                    >
                      <View>
                        <View
                          onLayout={[Function]}
                        >
                          <View
                            style={
                              [
                                {
                                  "transform": [
                                    {
                                      "scale": 1,
                                    },
                                  ],
                                },
                                {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": false,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "transparent",
                                    "borderRadius": 2,
                                    "height": 32,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "width": 32,
                                  },
                                  undefined,
                                ]
                              }
                              testID="button-icon"
                            >
                              <SvgMock
                                fill="currentColor"
                                name="ArrowLeft"
                                style={
                                  [
                                    {
                                      "color": "#121314",
                                      "height": 20,
                                      "width": 20,
                                    },
                                    undefined,
                                  ]
                                }
                              />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexBasis": "0%",
                              "flexGrow": 1,
                              "flexShrink": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              [
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Bold",
                                  "fontSize": 16,
                                  "fontWeight": 400,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                },
                                undefined,
                              ]
                            }
                          >
                            WalletConnect sessions
                          </Text>
                        </View>
                      </View>
                      <View>
                        <View
                          onLayout={[Function]}
                        />
                      </View>
                    </View>
                    <RCTSafeAreaView
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flex": 1,
                        }
                      }
                      testID="wallet-connect-sessions-screen"
                    >
                      <RCTScrollView
                        contentContainerStyle={
                          {
                            "paddingTop": 20,
                          }
                        }
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                          }
                        }
                      >
                        <View>
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flex": 1,
                                "justifyContent": "center",
                              }
                            }
                          >
                            <Text
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Regular",
                                  "fontSize": 16,
                                }
                              }
                            >
                              You have no active sessions
                            </Text>
                          </View>
                        </View>
                      </RCTScrollView>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;

exports[`WalletConnectSessions should render active sessions 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
                "marginTop": 0,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={3}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "gap": 16,
                            "height": 56,
                            "paddingLeft": 8,
                            "paddingRight": 8,
                          },
                          {
                            "marginTop": 0,
                          },
                          undefined,
                        ]
                      }
                      testID="header"
                    >
                      <View>
                        <View
                          onLayout={[Function]}
                        >
                          <View
                            style={
                              [
                                {
                                  "transform": [
                                    {
                                      "scale": 1,
                                    },
                                  ],
                                },
                                {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": false,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                [
                                  {
                                    "alignItems": "center",
                                    "backgroundColor": "transparent",
                                    "borderRadius": 2,
                                    "height": 32,
                                    "justifyContent": "center",
                                    "opacity": 1,
                                    "width": 32,
                                  },
                                  undefined,
                                ]
                              }
                              testID="button-icon"
                            >
                              <SvgMock
                                fill="currentColor"
                                name="ArrowLeft"
                                style={
                                  [
                                    {
                                      "color": "#121314",
                                      "height": 20,
                                      "width": 20,
                                    },
                                    undefined,
                                  ]
                                }
                              />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "display": "flex",
                              "flexBasis": "0%",
                              "flexGrow": 1,
                              "flexShrink": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "display": "flex",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              [
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Bold",
                                  "fontSize": 16,
                                  "fontWeight": 400,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                },
                                undefined,
                              ]
                            }
                          >
                            WalletConnect sessions
                          </Text>
                        </View>
                      </View>
                      <View>
                        <View
                          onLayout={[Function]}
                        />
                      </View>
                    </View>
                    <RCTSafeAreaView
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flex": 1,
                        }
                      }
                      testID="wallet-connect-sessions-screen"
                    >
                      <RCTScrollView
                        contentContainerStyle={
                          {
                            "paddingTop": 20,
                          }
                        }
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                          }
                        }
                      >
                        <View>
                          <TouchableOpacity
                            onLongPress={[Function]}
                            style={
                              {
                                "borderBottomColor": "#b7bbc866",
                                "borderBottomWidth": 1,
                                "flexDirection": "row",
                                "paddingHorizontal": 20,
                                "paddingVertical": 10,
                              }
                            }
                          >
                            <View>
                              <View
                                placeholderStyle={
                                  {
                                    "backgroundColor": "#f3f5f9",
                                  }
                                }
                                useNativeDriver={true}
                              >
                                <Image
                                  onError={[Function]}
                                  onLoadEnd={[Function]}
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "height": 44,
                                      "width": 44,
                                    }
                                  }
                                />
                                <View
                                  collapsable={false}
                                  style={
                                    {
                                      "bottom": 0,
                                      "left": 0,
                                      "opacity": 1,
                                      "position": "absolute",
                                      "right": 0,
                                      "top": 0,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "height": 44,
                                          "width": 44,
                                        },
                                        {
                                          "backgroundColor": "#eee",
                                        },
                                        {
                                          "backgroundColor": "#f3f5f9",
                                        },
                                      ]
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Bold",
                                    "fontSize": 16,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                Session 1
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 12,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                peer1
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 12,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                https://example.com
                              </Text>
                            </View>
                          </TouchableOpacity>
                          <TouchableOpacity
                            onLongPress={[Function]}
                            style={
                              {
                                "borderBottomColor": "#b7bbc866",
                                "borderBottomWidth": 1,
                                "flexDirection": "row",
                                "paddingHorizontal": 20,
                                "paddingVertical": 10,
                              }
                            }
                          >
                            <View>
                              <View
                                placeholderStyle={
                                  {
                                    "backgroundColor": "#f3f5f9",
                                  }
                                }
                                useNativeDriver={true}
                              >
                                <Image
                                  onError={[Function]}
                                  onLoadEnd={[Function]}
                                  source={
                                    {
                                      "uri": undefined,
                                    }
                                  }
                                  style={
                                    {
                                      "height": 44,
                                      "width": 44,
                                    }
                                  }
                                />
                                <View
                                  collapsable={false}
                                  style={
                                    {
                                      "bottom": 0,
                                      "left": 0,
                                      "opacity": 1,
                                      "position": "absolute",
                                      "right": 0,
                                      "top": 0,
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "height": 44,
                                          "width": 44,
                                        },
                                        {
                                          "backgroundColor": "#eee",
                                        },
                                        {
                                          "backgroundColor": "#f3f5f9",
                                        },
                                      ]
                                    }
                                  />
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "marginLeft": 20,
                                }
                              }
                            >
                              <Text
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist-Bold",
                                    "fontSize": 16,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                Session 2
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 12,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                peer2
                              </Text>
                              <Text
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist-Regular",
                                    "fontSize": 12,
                                    "marginBottom": 10,
                                  }
                                }
                              >
                                https://example.org
                              </Text>
                            </View>
                          </TouchableOpacity>
                        </View>
                      </RCTScrollView>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "height": 64,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        }
      }
    />
  </RNCSafeAreaProvider>
</View>
`;
